# geariq

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_RUN.md  LICENSE  LOCAL_DEVEL.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tracks_table.py  0002_add_product_vector.py
backend/app/: main.py
backend/app/api/routes/: search.py
backend/app/api/schemas/: search.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: product.py  track.py
backend/app/services/: cache.py  catalog.py  enrichment.py  matching.py  query_parser.py  search_service.py  track.py  vector_search.py
backend/app/services/adapters/: __init__.py  cj.py  impact.py  rakuten.py  rapidapi.py  scrapeless.py  serpapi.py
backend/geariq_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_rationale_and_admin.py  test_search_and_matching.py  test_track.py
frontend/: .eslintrc.json  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/components/: ProductCard.tsx  SearchBar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: index.tsx  results.tsx
frontend/src/pages/admin/: tracks.tsx
frontend/src/styles/: globals.css
scripts/: dev_up.sh  record_demo.sh
