[project]
name = "geariq-backend"
version = "0.1.0"
dependencies = [
  "fastapi~=0.115",
  "uvicorn[standard]~=0.30",
  "pydantic~=2.8",
  "SQLAlchemy~=2.0",
  "psycopg[binary]~=3.2",
  "alembic~=1.13",
  "redis~=5.0",
  "httpx~=0.27",
  "tenacity~=9.0",
  "pgvector~=0.3.5",
]
[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "black", "mypy", "types-redis"]
[tool.black]
line-length = 100
